--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C321D55646F52645A8ACE9B10CEC6AE5
+ProjectName=Half Life2 DEMO
 
 [Script/JobsGame.AmyCharacter]
 m_MaxSpeedWalk=500.0
@@ -12,7 +13,6 @@ m_MaxSpeedFly=200.0
 m_AirControl=0.8
 m_MassCharacter=85.0
 m_JumpHeight=350.0
-
 
 
 
