--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/DefaultMap.DefaultMap
-EditorStartupMap=/Game/Level/DefaultMap.DefaultMap
+GameDefaultMap=/Game/Level/GameMap.GameMap
+EditorStartupMap=/Game/Level/GameMap.GameMap
 GlobalDefaultGameMode=/Game/Level/BP_Game_Mode.BP_Game_Mode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
