--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -115,6 +115,7 @@ ManualIPAddress=
 +Profiles=(Name="Interaction",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="InteractObject",CustomResponses=,HelpMessage="InteractActor")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="InteractObject")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="InteractChannel")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="HopperMineCollision")
 +EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore)))
 +EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="Pawn"),(Channel="Vehicle")))
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Pawn"),(Channel="Visibility"),(Channel="Vehicle")))
