Fix Sound and fix flashlight Need Fix GEngine physics constructor

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -181,3 +181,6 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOu
 MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/JobsGame.FleshLightComponent",NewName="/Script/JobsGame.FlashLightComponent")
