--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -171,16 +171,11 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType5,Name="Paper")
 +PhysicalSurfaces=(Type=SurfaceType6,Name="Asphalt")
 +PhysicalSurfaces=(Type=SurfaceType7,Name="Plastic")
-+PhysicalSurfaces=(Type=SurfaceType8,Name="Wood_Box")
-+PhysicalSurfaces=(Type=SurfaceType9,Name="Wood_Panel")
-+PhysicalSurfaces=(Type=SurfaceType10,Name="Paper_Box")
-+PhysicalSurfaces=(Type=SurfaceType11,Name="Kit_Metal")
-+PhysicalSurfaces=(Type=SurfaceType12,Name="No_Decal")
-+PhysicalSurfaces=(Type=SurfaceType13,Name="Wood_Door")
++PhysicalSurfaces=(Type=SurfaceType14,Name="Characters")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=False),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=False),MBPNumSubdivs=2)
 MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
-
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/JobsGame.FleshLightComponent",NewName="/Script/JobsGame.FlashLightComponent")
+
