big fix more bugs

--- a/JobsGame.uproject
+++ b/JobsGame.uproject
@@ -26,6 +26,14 @@
 		{
 			"Name": "NiagaraFluids",
 			"Enabled": true
+		},
+		{
+			"Name": "PoseSearch",
+			"Enabled": true
+		},
+		{
+			"Name": "MotionTrajectory",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
