--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -121,6 +121,7 @@ ManualIPAddress=
 +EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore)))
 +EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="Pawn"),(Channel="Vehicle")))
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Pawn"),(Channel="Visibility"),(Channel="Vehicle")))
++EditProfiles=(Name="BlockAll",CustomResponses=((Channel="InteractChannel",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
