--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/MapGame.MapGame
-EditorStartupMap=/Game/Level/MapGame.MapGame
+GameDefaultMap=/Game/Level/TEST_AI_MAP.TEST_AI_MAP
+EditorStartupMap=/Game/Level/TEST_AI_MAP.TEST_AI_MAP
 GlobalDefaultGameMode=/Game/Level/BP_Game_Mode.BP_Game_Mode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
