--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,7 +51,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.AutoExposure=False
-
+r.Decal.FadeScreenSizeMult = 20
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
@@ -184,4 +184,7 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/JobsGame.FleshLightComponent",NewName="/Script/JobsGame.FlashLightComponent")
+
+[/Script/Engine.GarbageCollectionSettings]
+gc.VerifyUObjectsAreNotFGCObjects=False
 
