work physics surface

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Level/TestMap.TestMap
 EditorStartupMap=/Game/Level/TestMap.TestMap
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_Game_Mode.BP_Game_Mode_C
+GameInstanceClass=/Script/JobsGame.BaseGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -52,6 +53,8 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.AutoExposure=False
 r.Decal.FadeScreenSizeMult = 20
+r.Mobile.AntiAliasing=2
+
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
@@ -171,13 +174,17 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Concrete")
-+PhysicalSurfaces=(Type=SurfaceType2,Name="Wood")
-+PhysicalSurfaces=(Type=SurfaceType3,Name="Metal")
-+PhysicalSurfaces=(Type=SurfaceType4,Name="Glass")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Asphalt")
++PhysicalSurfaces=(Type=SurfaceType3,Name="Rock")
++PhysicalSurfaces=(Type=SurfaceType4,Name="Gravel")
 +PhysicalSurfaces=(Type=SurfaceType5,Name="Paper")
-+PhysicalSurfaces=(Type=SurfaceType6,Name="Asphalt")
++PhysicalSurfaces=(Type=SurfaceType6,Name="Tile")
 +PhysicalSurfaces=(Type=SurfaceType7,Name="Plastic")
-+PhysicalSurfaces=(Type=SurfaceType14,Name="Characters")
++PhysicalSurfaces=(Type=SurfaceType8,Name="Wood")
++PhysicalSurfaces=(Type=SurfaceType9,Name="Flesh")
++PhysicalSurfaces=(Type=SurfaceType10,Name="Metal")
++PhysicalSurfaces=(Type=SurfaceType11,Name="Sand")
++PhysicalSurfaces=(Type=SurfaceType12,Name="Glass")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=False),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=False),MBPNumSubdivs=2)
 MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
