--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,4 +2,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C321D55646F52645A8ACE9B10CEC6AE5
 ProjectName=Half-Life2 DEMO
+ProjectVersion=1.2.5
 
