base models and npc_turretfloor

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/TestMap.TestMap
-EditorStartupMap=/Game/Level/TestMap.TestMap
+GameDefaultMap=/Game/ai_map.ai_map
+EditorStartupMap=/Game/ai_map.ai_map
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_Game_Mode.BP_Game_Mode_C
 GameInstanceClass=/Script/JobsGame.BaseGameInstance
 
