--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -194,3 +194,6 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 [/Script/Engine.GarbageCollectionSettings]
 gc.VerifyUObjectsAreNotFGCObjects=False
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
