NEW BUILD UE5.4

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -196,4 +196,7 @@ gc.VerifyUObjectsAreNotFGCObjects=False
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
+AgentRadius=20.000000
+ObservedPathsTickInterval=0.200000
+bDrawPolyEdges=True
 
